--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main, master ]
 
 jobs:
-  test:
+  quality:
     runs-on: ubuntu-latest
 
     strategy:
@@ -27,6 +27,9 @@ jobs:
       
     - name: Run ESLint
       run: npm run lint
+      
+    - name: Run security audit
+      run: npm audit --audit-level=high
       
     - name: Run tests with coverage
       run: npm run test:coverage
