--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon src/server.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "security": "npm audit",
+    "security:fix": "npm audit fix"
   },
   "keywords": [
     "nodejs",
@@ -33,7 +35,7 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-security": "^3.0.1",
     "jest": "^30.0.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.1.10",
     "supertest": "^7.1.1"
   }
 }
